# Polygon-Area-Minimization-Maximization-Algorithms

./: README.md
project3_final/: CMakeLists.txt  ConvexHullToSimplePolygon.cpp  ConvexHullToSimplePolygon.h  EdgeToClosestPoint.cpp  EdgeToClosestPoint.h  Evaluation.cpp  Evaluation.h  README.md  SimpleClosedPolygonalChain.cpp  SimpleClosedPolygonalChain.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  incremental.cpp  incremental.h  localSearch.cpp  localSearch.h  main.cpp  utils.cpp  utils.h
